--- a/css/style.css
+++ b/css/style.css
@@ -1,118 +1,80 @@
-*{
-    margin: 0;
-    padding: 0;
-}
+@charset "UTF-8";
+* {
+  margin: 0;
+  padding: 0; }
 
 body {
-    background-color: lightgray;
-}
+  background-color: lightgray; }
 
 section {
-    padding-top: 5rem;
-}
-#tabla-precios {
-    display:inline-block;
-    width:100%;
-    margin-top:50px
-   }
-   
-   /*Columnas*/
-   
-   .precio-col {
-    display:inline-block;
-    background-color:#f3f3f3;
-    width:100%;
-    max-width:500px;
-    border-radius:10px;
-    margin-bottom:50px;
-    box-shadow: 0px 2px 5px #ddd
-   }
-   
-   @media screen and (min-width:768px) {
-    .precio-col {
-    width:32%;
-    float:left;
-    margin-right:2%
-    }
-    
-    .precio-col:last-child {
-    margin-right:0
-    }
-   }
-   
-   /*Headers*/
-   
-   .precio-col-header {
-    background-color:rgb(175, 112, 247);
-    padding:20px;
-    border-top-left-radius:10px;
-    border-top-right-radius:10px
-   }
-   
-   .precio-col:nth-child(2) .precio-col-header {
-    background-color:#890aff
-   }
-   
-   .precio-col-header h3 {
-    color:#000000;
-    text-align:center;
-    font-size:30px;
-    font-weight:600;
-    margin-bottom:0
-   }
-   
-   .precio-col-header p {
-    text-align:center;
-    color:#000000;
-    font-size:14px;
-    margin-bottom:0
-   }
-   
-   /*Características*/
-   
-   .precio-col-features {
-    padding: 0 20px 20px 20px
-   }
-   
-   .precio-col-features p {
-    padding:20px 0;
-    margin:0;
-    text-align:center;
-    border-top:1px solid #ddd
-   }
-   
-   .precio-col-features p:first-child,
-   .precio-col-features p:last-child {
-    border-top:none
-   }
-   
-   /*Comprar*/
-   
-   .precio-col-comprar {
-    padding:10px;
-    max-width:250px;
-    text-align:center;
-    background-color:#2335df;
+  padding-top: 5rem; }
+
+.tabla-precios, .precio-col {
+  display: inline-block;
+  width: 100%;
+  margin-top: 50px; }
+
+/*Columnas*/
+.precio-col {
+  margin-top: 0;
+  max-width: 500px;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  box-shadow: 0px 2px 5px #dddddd; }
+
+@media screen and (min-width: 768px) {
+  .precio-col {
+    width: 31%;
+    float: left;
+    margin-right: 2%; }
+  /*Headers*/
+  .precio-col-header {
+    background-color: #af70f7;
+    padding: 20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px; }
+    .precio-col-header p {
+      color: #000000;
+      font-size: 18px;
+      margin-bottom: 0;
+      text-align: center; }
+    .precio-col-header h3 {
+      color: #000000;
+      font-size: 30px;
+      margin-bottom: 0;
+      text-align: center;
+      font-weight: 600; }
+  .precio-col:nth-child(2) .precio-col-header {
+    background-color: #890aff; }
+  /*Características*/
+  .precio-col-features {
+    padding: 0 20px 20px 20px; }
+    .precio-col-features p {
+      padding: 20px 0;
+      margin: 0;
+      text-align: center;
+      border-top: 1px solid #ddd; }
+      .precio-col-features p:first-child, .precio-col-features p :last-child {
+        border-top: none; }
+  /*Comprar*/
+  .precio-col-comprar {
+    background-color: #2335df;
+    padding: 10px;
+    max-width: 250px;
+    text-align: center;
     margin: 0 auto 20px;
-    border-radius:10px;
+    border-radius: 10px;
     border: 2px solid #2335df;
-    transition: all 0.3s
-   }
-   
-   .precio-col-comprar a {
-    color:#f3f3f3;
-    padding:10px;
-    font-size:20px;
-    text-transform:uppercase;
-    transition: all 0.3s
-   }
-   
-   .precio-col-comprar:hover {
-    background-color:#f3f3f3;
-    transition: all 0.3s
-   }
-   
-   .precio-col-comprar:hover a {
-    color:#2335df;
-    transition: all 0.3s
-   }
+    transition: all 0.3s; }
+    .precio-col-comprar a {
+      color: #f3f3f3;
+      padding: 10px;
+      font-size: 20px;
+      text-transform: uppercase;
+      transition: all 0.3s; }
+    .precio-col-comprar:hover {
+      background-color: #f3f3f3;
+      transition: all 0.3s; }
+      .precio-col-comprar:hover a {
+        color: #2335df;
+        transition: all 0.3s; } }
